...
    // MARK: Properties
    
    let viewModel: AlbumsViewModel
    
    weak var delegate: ShowAlbumPhotosCoordinatorDelegate?
    
    lazy var albumsTV: UITableView = {
        let tableView = UITableView()
        tableView.backgroundColor = .clear
        tableView.separatorStyle = .singleLine
        tableView.separatorInset = UIEdgeInsets(top: 0, left: 16, bottom: 0, right: 16)
        tableView.layoutMargins = UIEdgeInsets.zero
        tableView.translatesAutoresizingMaskIntoConstraints = false
...
