//
//  PhotoAlbumUITests.swift
//  PhotoAlbumUITests
//
//  Created by Ali Hassan on 16/04/2021.
//

import XCTest

class PhotoAlbumUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testRooView() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let albumsTV = app.tables["albumsTV"]
        XCTAssertTrue(albumsTV.exists)
        let albumCell_0 = albumsTV.cells.element(matching: .cell, identifier: "albumCell_0")
        XCTAssert(albumCell_0.waitForExistence(timeout: 10))
    }
    
    func testPhotosNavigation() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let albumsTV = app.tables["albumsTV"]
        XCTAssertTrue(albumsTV.exists)
        let albumCell_0 = albumsTV.cells.element(matching: .cell, identifier: "albumCell_0")
        XCTAssert(albumCell_0.waitForExistence(timeout: 10))
        albumCell_0.tap()
        
        let photosCollectionView = app.collectionViews["photosCollectionView"]
        XCTAssert(photosCollectionView.waitForExistence(timeout: 10))
        let photoCell_0 = photosCollectionView.cells.element(matching: .cell, identifier: "photoCell_0")
        XCTAssert(photoCell_0.waitForExistence(timeout: 10))
    }
    
    func testPhotoDetailNavigation() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let albumsTV = app.tables["albumsTV"]
        XCTAssertTrue(albumsTV.exists)
        let albumCell_0 = albumsTV.cells.element(matching: .cell, identifier: "albumCell_0")
        XCTAssert(albumCell_0.waitForExistence(timeout: 10))
        albumCell_0.tap()
        
        let photosCollectionView = app.collectionViews["photosCollectionView"]
        XCTAssert(photosCollectionView.waitForExistence(timeout: 10))
        let photoCell_0 = photosCollectionView.cells.element(matching: .cell, identifier: "photoCell_0")
        XCTAssert(photoCell_0.waitForExistence(timeout: 10))
        photoCell_0.tap()
        
        let photoDetailTitle = app.staticTexts["photoDetailTitle"]
        XCTAssertTrue(photoDetailTitle.waitForExistence(timeout: 10))
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
